--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avalanche-autosetup",
+  "name": "backbonecabal-customrpc-browser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
